Update ruff to 0.6.4 (#13120)
Signed-off-by: levscaut <lwd2010530@qq.com>
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>
Co-authored-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,6 +152,7 @@ exclude = ["tests", "tests.*"]
 [tool.ruff]
 line-length = 100
 target-version = "py38"
+required-version = "0.6.4"
 force-exclude = true
 extend-include = ["*.ipynb"]
 extend-exclude = [
