--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -749,7 +749,6 @@ llama_index:
           "fastapi",
           "uvicorn",
         ]
-      ">= 0.11.0": ["fastapi>=0.100.0"]
     run: pytest tests/llama_index --ignore tests/llama_index/test_llama_index_autolog.py --ignore tests/llama_index/test_llama_index_tracer.py
   autologging:
     minimum: "0.10.44"
@@ -763,7 +762,7 @@ llama_index:
           "fastapi",
           "uvicorn",
         ]
-      ">= 0.11.0": ["fastapi>=0.100.0"]
+      "< 0.11.0": ["pydantic<2"]
     run: pytest tests/llama_index/test_llama_index_autolog.py tests/llama_index/test_llama_index_tracer.py
 
 autogen:
