--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -701,12 +701,10 @@ langchain:
     requirements:
       ">= 0.0.0": [
           "pyspark",
-          # Pinning for the same reason as in the models section
-          "openai<1.8.0",
+          "openai",
           "google-search-results",
           "psutil",
           "faiss-cpu",
-          "langchain-experimental",
           "numexpr",
           "spacy",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
@@ -714,6 +712,12 @@ langchain:
           # Required to run tests/openai/mock_openai.py
           "fastapi",
           "uvicorn",
+        ]
+      "< 0.3.0": ["langchain_openai<0.2.0"]
+      ">= 0.3.0": [
+          # Need to bump FasAPI version to support pydantic v2
+          "fastapi>=0.100.0",
+          "langchain-openai>=0.2.0",
         ]
     run: |
       pytest tests/langchain/test_langchain_autolog.py
@@ -724,6 +728,11 @@ langchain:
         echo "Testing langchain autolog with pydantic v2"
         pytest tests/langchain/test_langchain_autolog.py
       fi
+
+      echo "Testing langchain autolog with langchain-community"
+      # Install with 'langchain' to ensure the compatible version is installed
+      pip install langchain langchain-community
+      pytest tests/langchain/test_langchain_autolog.py
 
 llama_index:
   package_info:
