--- a/.github/workflows/mlflow-3.yaml
+++ b/.github/workflows/mlflow-3.yaml
@@ -39,6 +39,6 @@ jobs:
       - uses: ./.github/actions/untracked
       - uses: ./.github/actions/setup-python
       - run: |
-          pip install . scikit-learn langchain
+          pip install . scikit-learn langchain langchain_community
       - run: |
           python examples/mlflow-3/example.py
