--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -645,6 +645,8 @@ dspy:
     pip_release: "dspy-ai"
     install_dev: |
       pip install git+https://github.com/stanfordnlp/dspy.git
+  python:
+      ">= 0.0.0": "3.9"
   models:
     minimum: "2.4.16"
     maximum: "2.5.0"
