--- a/examples/pytorch/BertNewsClassification/python_env.yaml
+++ b/examples/pytorch/BertNewsClassification/python_env.yaml
@@ -10,7 +10,7 @@ dependencies:
   - numpy<2.0
   - torch>=2.1
   - torchdata
-  - torchtext==0.15.1
+  - torchtext
   - lightning==2.0.0
   - jsonargparse[signatures]>=4.17.0
   - protobuf<4.0.0
