remove lightning pin
Signed-off-by: Daniel Lok <daniel.lok@databricks.com>

--- a/examples/pytorch/BertNewsClassification/python_env.yaml
+++ b/examples/pytorch/BertNewsClassification/python_env.yaml
@@ -11,6 +11,6 @@ dependencies:
   - torch>=2.1
   - torchdata
   - torchtext
-  - lightning==2.0.0
+  - lightning
   - jsonargparse[signatures]>=4.17.0
   - protobuf<4.0.0
