Ignore tests/optuna in .github/workflows/protobuf-cross-test.yml
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -305,10 +305,8 @@ jobs:
   optuna:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    timeout-minutes: 90
+    timeout-minutes: 30
     permissions: {}
-    strategy:
-      fail-fast: false
     steps:
       - uses: actions/checkout@v4
         with:
@@ -325,7 +323,7 @@ jobs:
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
-          pytest tests/optuna/test_storage.py
+          pytest tests/optuna
   pyfunc:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
