--- a/examples/pytorch/BertNewsClassification/python_env.yaml
+++ b/examples/pytorch/BertNewsClassification/python_env.yaml
@@ -8,9 +8,9 @@ dependencies:
   - transformers>=4.0.0
   - pandas
   - numpy<2.0
-  - torch>=2.1
+  - torch==2.1
   - torchdata
-  - torchtext
+  - torchtext==0.16.2
   - lightning
   - jsonargparse[signatures]>=4.17.0
   - protobuf<4.0.0
