--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -95,7 +95,8 @@ jobs:
           source dev/setup-ssh.sh
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} --quiet --requires-ssh \
             --ignore-flavors --ignore=tests/examples --ignore=tests/recipes --ignore=tests/evaluate \
-            --ignore=tests/deployments/server tests
+            --ignore=tests/deployments/server --ignore=tests/pyspark/optuna \
+            --ignore tests/genai/evaluate tests
 
   py310:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
@@ -295,9 +296,13 @@ jobs:
           pip install pyspark torch transformers langchain langchain-experimental '.[genai]' 'shap<0.47.0'
       - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
-      - name: Run tests
+      - name: Run evaluation tests
         run: |
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} tests/evaluate --ignore=tests/evaluate/test_default_evaluator_delta.py
+      - name: Run GenAI evaluation tests
+        run: |
+          pip install databricks-agents
+          pytest tests/genai
       - name: Run tests with delta
         run: |
           pytest tests/evaluate/test_default_evaluator_delta.py
