--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -288,6 +288,8 @@ jobs:
           submodules: recursive
       - uses: ./.github/actions/untracked
       - uses: ./.github/actions/setup-python
+        with:
+          python-version: "3.10"
       - uses: ./.github/actions/setup-pyenv
       - uses: ./.github/actions/setup-java
       - name: Install dependencies
