--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -288,8 +288,6 @@ jobs:
           submodules: recursive
       - uses: ./.github/actions/untracked
       - uses: ./.github/actions/setup-python
-        with:
-          python-version: "3.10"
       - uses: ./.github/actions/setup-pyenv
       - uses: ./.github/actions/setup-java
       - name: Install dependencies
@@ -298,17 +296,36 @@ jobs:
           pip install pyspark torch transformers langchain langchain-experimental '.[genai]' 'shap<0.47.0'
       - uses: ./.github/actions/show-versions
       - uses: ./.github/actions/pipdeptree
-      - name: Run evaluation tests
+      - name: Run tests
         run: |
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} tests/evaluate --ignore=tests/evaluate/test_default_evaluator_delta.py
-      - name: Run GenAI evaluation tests
+      - name: Run tests with delta
+        run: |
+          pytest tests/evaluate/test_default_evaluator_delta.py
+
+  genai:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions: {}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          submodules: recursive
+      - uses: ./.github/actions/untracked
+      - uses: ./.github/actions/setup-python
+        with:
+          python-version: "3.10"
+      - uses: ./.github/actions/setup-pyenv
+      - uses: ./.github/actions/setup-java
+      - name: Install dependencies
+        run: |
+          source ./dev/install-common-deps.sh
+      - name: Run GenAI Tests
         run: |
           # GenAI evaluation tests require databricks-agents that only work with Python 3.10~
           pip install databricks-agents openai
           pytest tests/genai
-      - name: Run tests with delta
-        run: |
-          pytest tests/evaluate/test_default_evaluator_delta.py
 
   optuna:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
