--- a/packages/tracing/pyproject.toml
+++ b/packages/tracing/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "mlflow-trace"
+name = "mlflow-tracing"
 version = "2.21.3.dev0"
-description = "MLflow Trace is an open-source, lightweight Python package that only includes the minimum set of dependencies and functionality to instrument your code/models/agents with MLflow Tracing."
+description = "MLflow Tracing SDK is an open-source, lightweight Python package that only includes the minimum set of dependencies and functionality to instrument your code/models/agents with MLflow Tracing."
 readme = "README.md"
 keywords = ["mlflow", "ai", "databricks", "observability", "monitoring"]
 classifiers = [
