Enable RUF003 to avoid ambiguous unicode characters in comments (#13991)
Signed-off-by: abhishekpawar1060 <abhishekpawar7218@gmail.com>
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>
Co-authored-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -212,6 +212,7 @@ select = [
   "PT026",   # pytest-use-fixtures-without-parameters
   "PT027",   # pytest-unittest-raises-assertion
   "RET504",  # unnecessary-assign
+  "RUF003",  # ambiguous-unicode-character-comment
   "RUF010",  # explicit-f-string-type-conversion
   "RUF013",  # implicit-optional
   "RUF100",  # unused-noqa
