--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -89,6 +89,9 @@ jobs:
         run: |
           source .venv/bin/activate
           python tests/check_mlflow_lazily_imports_ml_packages.py
+      steps:
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
       - name: Run tests
         run: |
           source .venv/bin/activate
