--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ select = [
   "C4",      # flake8-comprehensions
   "I",       # isort
   "ISC001",  # single-line-implicit-string-concatenation
+  "N804",    # invalid-first-argument-name-for-class-method
   "PIE790",  # unnecessary-placeholder
   "PLR0402", # manual-from-import
   "PLE1205", # logging-too-many-args
