--- a/examples/supply_chain_security/python_env.yaml
+++ b/examples/supply_chain_security/python_env.yaml
@@ -2,5 +2,8 @@ python: "3.9"
 build_dependencies:
   - pip
 dependencies:
-  - --require-hashes
-  - -r requirements.txt
+  - pandas==1.3.2
+  - scikit-learn==0.24.2
+  - mlflow
+
+
