Ignore eval_with_synthetic_example.py
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -273,6 +273,7 @@ convention = "google"
 exclude = [
   "mlflow/protos",
   "mlflow/ml_package_versions.py",
+  "mlflow/models/notebook_resources/eval_with_synthetic_example.py",
   "mlflow/server/js",
   "mlflow/store/db_migrations",
   "tests/protos",
