--- a/examples/supply_chain_security/python_env.yaml
+++ b/examples/supply_chain_security/python_env.yaml
@@ -2,8 +2,8 @@ python: "3.9"
 build_dependencies:
   - pip
 dependencies:
+  - numpy==1.21.4
   - pandas==1.3.2
+  - scipy==1.7.2
   - scikit-learn==0.24.2
   - mlflow
-
-
