--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -23,7 +23,7 @@ env:
   MLFLOW_HOME: /home/runner/work/mlflow/mlflow
   MLFLOW_CONDA_HOME: /usr/share/miniconda
   SPARK_LOCAL_IP: localhost
-  PYTHON_VERSION: "3.10" # mininum supported version + 1
+  PYTHON_VERSION: "3.10" # minimum supported version + 1
 
 defaults:
   run:
