Fix typo: "instumentation" -> "instrumentation" (#15488)
- Corrected the typo "instumentation" to "instrumentation" in "tracing-schema.mdx".
- Added a reference to the typo fix in "pyproject.toml".

Signed-off-by: Vinodh Zamboulingame <vzamboulingame@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -299,6 +299,7 @@ gam = "gam"          # generalized additive models
 ser = "ser"          # serialization
 yhat = "yhat"        # ŷ
 iternal = "internal" # typo of "internal"
+instumentation = "instrumentation" # typo of "instrumentation"
 
 # https://github.com/crate-ci/typos/blob/master/docs/reference.md
 [tool.typos.files]
