--- a/.github/workflows/dev-setup.yml
+++ b/.github/workflows/dev-setup.yml
@@ -43,7 +43,7 @@ jobs:
     timeout-minutes: 30
     permissions:
       contents: read
-    if: github.event_name != 'schedule' || github.repository == 'mlflow-automation/mlflow'
+    if: github.event_name != 'schedule' || github.repository == 'mlflow/dev'
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/free-disk-space
