--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -128,7 +128,8 @@ jobs:
     if: ${{ needs.set-matrix.outputs.is_matrix1_empty == 'false' }}
     runs-on: ${{ matrix.runs_on }}
     timeout-minutes: 120
-    permissions: {}
+    permissions:
+      contents: read
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.set-matrix.outputs.matrix1) }}
@@ -175,7 +176,8 @@ jobs:
     if: ${{ needs.set-matrix.outputs.is_matrix2_empty == 'false' }}
     runs-on: ${{ matrix.runs_on }}
     timeout-minutes: 120
-    permissions: {}
+    permissions:
+      contents: read
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.set-matrix.outputs.matrix2) }}
