Test star import
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -109,11 +109,13 @@ jobs:
         run: |
           pip install ${{ steps.build-dist.outputs.sdist-path }}
           python -c "import mlflow; print(mlflow.__version__)"
+          python -c "from mlflow import *"
 
       - name: Test installation from wheel
         run: |
           pip install --force-reinstall ${{ steps.build-dist.outputs.wheel-path }}
           python -c "import mlflow; print(mlflow.__version__)"
+          python -c "from mlflow import *"
 
       - name: Test installation from GitHub
         env:
