--- a/tests/db/compose.yml
+++ b/tests/db/compose.yml
@@ -8,6 +8,8 @@ services:
     working_dir: /mlflow/home
     entrypoint: /mlflow/home/tests/db/entrypoint.sh
     command: pytest tests/db
+    environment:
+      DISABLE_RESET_MLFLOW_URI_FIXTURE: "true"
 
   postgresql:
     image: postgres
@@ -51,6 +53,7 @@ services:
       - mysql
     environment:
       MLFLOW_TRACKING_URI: mysql://mlflowuser:mlflowpassword@mysql:3306/mlflowdb?charset=utf8mb4
+      DO_NOT_RESET_URI: "true"
       INSTALL_MLFLOW_FROM_REPO: true
 
   migration-mysql:
