--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -568,6 +568,8 @@ openai:
     run: |
       pytest tests/openai/test_openai_autolog.py tests/openai/test_openai_agent_autolog.py
     test_every_n_versions: 10
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 dspy:
   package_info:
@@ -588,6 +590,8 @@ dspy:
       ">= 0.0.0": ["openai"]
     run: |
       pytest tests/dspy/test_dspy_autolog.py
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 langchain:
   package_info:
@@ -689,6 +693,8 @@ langchain:
       # TODO: an unexpected issue happens when autolog test and evaluation test are run together, which need investigations
       pytest tests/langchain/test_langchain_autolog.py
       pytest tests/langchain/test_langchain_evaluation.py
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 langgraph:
   package_info:
@@ -725,6 +731,8 @@ langgraph:
       ">= 0.3.0": ["langgraph-prebuilt"]
     run: |
       pytest tests/langgraph/test_langgraph_autolog.py
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 llama_index:
   package_info:
@@ -761,6 +769,8 @@ llama_index:
         ]
       "< 0.11.0": ["pydantic<2"]
     run: pytest tests/llama_index/test_llama_index_autolog.py tests/llama_index/test_llama_index_tracer.py
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 ag2:
   package_info:
@@ -798,6 +808,8 @@ autogen:
           "autogen_ext",
         ]
     run: pytest tests/autogen
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 gemini:
   package_info:
@@ -813,6 +825,8 @@ gemini:
       # Install legacy gemini SDK to ensure the integration works for the legacy SDK 
       pip install google-generativeai
       pytest tests/gemini
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 anthropic:
   package_info:
@@ -828,6 +842,8 @@ anthropic:
     # Our CI runs tests for every minor version of the library by default, which results in
     # many test tasks for anthropic. Reducing the number of testing only for every 5 version.
     test_every_n_versions: 5
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 crewai:
   package_info:
@@ -843,6 +859,8 @@ crewai:
       ">= 0.80.0": "3.10"
     requirements:
     run: pytest tests/crewai
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 pydantic_ai:
   package_info:
@@ -903,6 +921,8 @@ mistral:
     maximum: "1.8.1"
     requirements:
     run: pytest tests/mistral
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 sentence_transformers:
   package_info:
@@ -981,6 +1001,8 @@ litellm:
           "uvicorn",
         ]
     run: pytest tests/litellm
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 groq:
   package_info:
@@ -992,6 +1014,8 @@ groq:
     maximum: "0.26.0"
     requirements:
     run: pytest tests/groq
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
 
 bedrock:
   package_info:
@@ -1002,3 +1026,5 @@ bedrock:
     minimum: "1.33.0"
     maximum: "1.38.28"
     run: pytest tests/bedrock
+    # Run integration test with the lightweight tracing SDK
+    test_tracing_sdk: true
