--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -642,14 +642,14 @@ langchain:
       # This causes installation of mlflow-skinny from stable version, while 'mlflow' points to the dev version,
       # resulting in a weird module conflict issue.
       pip install './skinny'
-      # Run all langchain tests except autologging and evaluation
-      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+      # Run all langchain tests except autologging
+      pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py
       # test both pydantic v1 and v2
       PYDANTIC_VERSION=$(python -c "import pydantic; print(pydantic.__version__)")
       if [[ $PYDANTIC_VERSION == 1.* ]]; then
         pip install 'pydantic>=2' 'fastapi>=0.100.0'
         echo "Testing langchain model export with pydantic v2"
-        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py --ignore tests/langchain/test_langchain_evaluation.py
+        pytest tests/langchain --ignore tests/langchain/test_langchain_autolog.py
       fi
   autologging:
     minimum: "0.1.0"
@@ -692,7 +692,6 @@ langchain:
 
       # TODO: an unexpected issue happens when autolog test and evaluation test are run together, which need investigations
       pytest tests/langchain/test_langchain_autolog.py
-      pytest tests/langchain/test_langchain_evaluation.py
     # Run integration test with the lightweight tracing SDK
     test_tracing_sdk: true
 
