--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -849,6 +849,10 @@ pydantic_ai:
       pip install pydantic-ai 
       # Update key libraries from source w/ no-deps
       pip install --no-deps \
+      # We need to install pydantic_graph and pydantic_ai_slim as pydantic_ai is dependent on both of them
+      # and we need to install them seperately. Without pinning them seperately would result in dependency
+      # conflict errors and the installation of pydantic_ai would get failed. 
+      # Ref: https://github.com/pydantic/pydantic-ai/blob/main/pydantic_ai_slim/pyproject.toml#L45-L52
         "git+https://github.com/pydantic/pydantic-ai.git#egg=pydantic-graph&subdirectory=pydantic_graph" \
         "git+https://github.com/pydantic/pydantic-ai.git#egg=pydantic-ai-slim&subdirectory=pydantic_ai_slim" \
         "git+https://github.com/pydantic/pydantic-ai.git#egg=pydantic-ai"
