Fix more ignores
Signed-off-by: harupy <17039389+harupy@users.noreply.github.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -480,5 +480,5 @@ jobs:
           export PATH=$PATH:$HADOOP_HOME/bin
           # Run Windows tests
           pytest --splits=${{ matrix.splits }} --group=${{ matrix.group }} \
-            --ignore-flavors --ignore=tests/projects --ignore=tests/examples --ignore=tests/evaluate --ignore tests/deployments/server --ignore=tests/optuna \
+            --ignore-flavors --ignore=tests/projects --ignore=tests/examples --ignore=tests/evaluate --ignore=tests/optuna \
             --ignore=tests/genai tests
