Fix `ImportError: cannot import name 'MappingProxyType' from 'types' (/home/runner/work/mlflow/mlflow/tests/types/__init__.py)` (#15702)
Signed-off-by: serena-ruan <serena.rxy@gmail.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -90,7 +90,9 @@ jobs:
       - name: Import check
         run: |
           source .venv/bin/activate
-          python tests/check_mlflow_lazily_imports_ml_packages.py
+          # `-I` is used to avoid importing modules from user-specific site-packages
+          # that might conflict with the built-in modules (e.g. `types`).
+          python -I tests/check_mlflow_lazily_imports_ml_packages.py
       - name: Run tests
         run: |
           source .venv/bin/activate
